Style: fix horizontal scrollbar

--- a/static/global.css
+++ b/static/global.css
@@ -50,7 +50,6 @@ body.box_center {
 
 body.box_horizontal_center {
     margin: 0px;
-    width: 100vw;
 }
 
 .box_horizontal_center {
